@@ -882,15 +882,26 @@ public class
       cmdLine.addParameters(args);
     }
     
-    final List<String> cp = ClasspathBootstrap.getBuildProcessApplicationClasspath();
-    cp.add(compilerPath);
+    @SuppressWarnings("UnnecessaryFullyQualifiedName") 
+    final Class<?> launcherClass = org.jetbrains.jps.cmdline.Launcher.class;
+    
+    final List<String> launcherCp = new ArrayList<String>();
+    launcherCp.add(ClasspathBootstrap.getResourcePath(launcherClass));
+    launcherCp.add(compilerPath);
+    ClasspathBootstrap.appendJavaCompilerClasspath(launcherCp);
+    // this will disable standard extensions to ensure javac is loaded from the right tools.jar
+    cmdLine.addParameter("-Djava.ext.dirs=");
+    cmdLine.addParameter("-classpath");
+    cmdLine.addParameter(classpathToString(launcherCp));
+    
+    cmdLine.addParameter(launcherClass.getName());
+
+    final List<String> cp = ClasspathBootstrap.getBuildProcessApplicationClasspath(true);
     cp.addAll(myClasspathManager.getBuildProcessPluginsClasspath(project));
     if (isProfilingMode) {
       cp.add(new File(workDirectory, "yjp-controller-api-redist.jar").getPath());
       cmdLine.addParameter("-agentlib:yjpagent=disablej2ee,disablealloc,delay=10000,sessionname=ExternalBuild");
     }
-
-    cmdLine.addParameter("-classpath");
     cmdLine.addParameter(classpathToString(cp));
 
     cmdLine.addParameter(BuildMain.class.getName());
